# LonelyOutputAllocator

./: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp  mytest.txt
